UI & livewire UI saves

--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,24 @@ body {
 body {
   padding-top: 100px;
 }
+
+.board-layout {
+  display: flex;
+  height: calc(100vh - 100px);
+  overflow: hidden;
+}
+
+#sidebar {
+  width: 260px;
+  position: fixed;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+}
+
+#boardContent {
+  margin-left: 260px;
+  overflow-y: auto;
+  height: calc(100vh - 100px);
+}
